--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "passport_demo",
+    "password": "!UCSD_fall@2020!",
+    "database": "striveRite_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
