--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "!UCSD_fall@2020!",
+    "password": "Slayer44?!",
     "database": "striveRite_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
